# triage-agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: 001_initial_schema.sql
src/testdata/: seed_workbook.py
src/triage_agent/: cli.py
src/triage_agent/agent/: _client.py  classifier.py  drafter.py  eval.py  models.py  run.py  triage.py
src/triage_agent/agent/prompts/: classifier.py  drafter.py  triage.py
src/triage_agent/api/: app.py
src/triage_agent/delivery/: __init__.py  dispatcher.py
src/triage_agent/extractors/: __init__.py  extractor.py
src/triage_agent/shared/: db.py  models.py  settings.py
src/triage_agent/triage/: __init__.py  scorer.py
src/triage_agent/workbook/: __init__.py  models.py  reader.py  schema.py  writer.py
tests/agent/: test_classifier.py  test_drafter.py  test_triage.py
tests/api/: test_app.py
tests/delivery/: test_dispatcher.py
tests/extractors/: test_extractor.py
tests/fixtures/eval_set/classifier/: cases.json
tests/fixtures/eval_set/drafter/: cases.json
tests/fixtures/eval_set/triage/: cases.json
tests/shared/: test_models.py
tests/triage/: test_scorer.py
tests/workbook/: test_workbook.py
